--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ p {
 /* Hero Section */
 /*hero è la pagina iniziale*/
 #hero {
-	background-image: url(./img/hero-bg.png); /*importo un immagine come background della pagina iniziale*/
+	background-image: url(./img/IMG_6121_NUOVA.JPG); /*importo un immagine come background della pagina iniziale*/
 	background-size: cover;
 	background-position: top center;
 	position: relative;
